<resources>
    <string name="app_name">Burned Calories Calculator</string>
    <string name="weight_label">Weight:</string>
    <string name="weight_tv">000</string>
    <string name="name_et">Name</string>
    <string name="miles_ran">Miles Ran:</string>
    <string name="calories_burned">Calories Burned:</string>
    <string name="height">Height:</string>
    <string name="bmi">BMI:</string>
    <string name="miles_tv">00.0</string>
    <string name="calories_tv">calories</string>
    <string name="bmi_amount_tv">BMI</string>
    <string-array name = "htft_array">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name = "htin_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
</resources>
