<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mcgee.burnedcaloriescalculator.BurnedCaloriesCalculatorActivity">

    <TextView
        android:id="@+id/weightTV"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/weight_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weightET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/weight_tv"
        android:hint="Weight"
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/weightTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/name_et"
        android:hint="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/milesranTV"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/miles_ran"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTV" />

    <TextView
        android:id="@+id/caloriesburnedTV"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/calories_burned"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milesranTV" />

    <TextView
        android:id="@+id/heightTV"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/height"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesburnedTV" />

    <TextView
        android:id="@+id/bmiTV"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/bmi"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightTV" />

    <TextView
        android:id="@+id/milesTV"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/miles_tv"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintLeft_toRightOf="@+id/milesranTV"
        app:layout_constraintRight_toLeftOf="@+id/milesranSB"
        app:layout_constraintTop_toBottomOf="@+id/weightET" />

    <SeekBar
        android:id="@+id/milesranSB"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:max="10"
        app:layout_constraintTop_toBottomOf="@+id/weightET"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/caloriesTV"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/calories_tv"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/caloriesburnedTV"
        app:layout_constraintTop_toBottomOf="@+id/milesTV" />

    <Spinner
        android:id="@+id/heightFT"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toRightOf="@+id/heightTV"
        app:layout_constraintTop_toBottomOf="@+id/caloriesTV" />

    <Spinner
        android:id="@+id/heightIN"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toRightOf="@+id/heightFT"
        app:layout_constraintTop_toBottomOf="@+id/caloriesTV" />

    <TextView
        android:id="@+id/bmiamountTV"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="50dp"
        android:text="@string/bmi_amount_tv"
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toRightOf="@+id/bmiTV"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/heightFT" />

</android.support.constraint.ConstraintLayout>
